delete unnecessary comments

--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
   
   <title>Frontend Mentor | Blog preview card</title>
 </head>
-<body> <!-- bg-yellow -->
+<body>
 <main class="card-container">
   
   <!-- card  -->
   <section class="card">
   
     <!-- picture of the course -->
-      <!-- <img class="card-picture" src="./assets/images/illustration-article.svg" alt="picture of the course" /> -->
       <div class="card-picture"></div>
     <!-- picture of the course -->
     
@@ -35,11 +34,6 @@
     
     <!-- author/teacher of the course -->
     <div class="card-author">
-      <!-- <picture>
-        <source srcset="./assets/images/image-avatar.avif" type="image/avif">
-        <source srcset="./assets/images/image-avatar.webp" type="image/webp">
-        <img loading="lazy" width="200" height="300" src="./assets/images/image-avatar.webp" alt="avatar picture profile">
-      </picture> -->
       <img class="profile-picture" src="./assets/images/image-avatar.webp" alt="avatar profile picture">
       Greg Hooper
     </div>
